Sun Feb  3 16:13:00 2013  Charlie Somerville  <charlie@charliesomerville.com>

	* doc/security.rdoc: add first cut at a Ruby security document

Sun Feb  3 10:25:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* random.c: Document range argument for Kernel#rand.
	  [ruby-core:51794] [Bug #7770]

Sun Feb  3 10:00:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* numeric.c: Document Float constants [ruby-core:51484] [Bug #7709]

Sun Feb  3 09:38:44 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/profiler.rb (PROFILE_CALL_PROC, PROFILE_RETURN_PROC): add b_call
	  and b_return to profile block calls.

	* lib/profiler.rb (PROFILE_CALL_PROC, PROFILE_RETURN_PROC): split
	  PROFILE_PROC for call and return events.

Sat Feb  2 14:32:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/minitest/mock.rb, lib/minitest/hell.rb: nodoc top-level module

Sat Feb  2 14:05:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/debug.rb: Documentation for DEBUGGER__ class methods based on
	  patch by Vincent Batts [ruby-core:51253]

Sat Feb  2 13:37:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/net/smtp.rb: Fix rdoc title for Net::SMTP

Sat Feb  2 13:32:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/net/pop.rb: Fix rdoc title for Net::POP3

Sat Feb  2 13:00:11 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/gserver.rb (GServer#start): fix a timing issue.  patch from
	  Charles Nutter.  [Bug #7081]

Sat Feb  2 12:36:54 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/fileutils.rb (copy_entry, wrap_traverse): preserve attributes of
	  directories on FileUtils.cp_r.  The fix was proposed by Jan
	  Wedekind.  [Bug #7246]

	* test/fileutils/test_fileutils.rb: add a test for above.

Sat Feb  2 12:30:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/uri/ftp.rb (URI::FTP.new2): nodoc method from r39013 [Bug #7301]

Sat Feb  2 12:15:36 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/uri/ftp.rb (URI::FTP.new2): remove the rdoc because it is not